--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pronóstico Climático Futuro</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="map.css">
+    <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+    <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
 </head>
 <body>
     <div class="container">
@@ -35,6 +38,17 @@
                         <div class="form-group">
                             <label for="country">País</label>
                             <input type="text" id="country" placeholder="Ej: Estados Unidos" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="mapa-btn">Elegir en Mapa</label>
+                            <button type="button" id="mapa-btn" class="btn-primary map-picker-btn">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="vertical-align: middle;">
+                                    <path d="M12 21.6c-4.4 0-8-3.6-8-8 0-3.6 2.5-6.6 6-7.7V3.2L12 2l2.1 1.2v2.7c3.5 1.1 6 4.1 6 7.7 0 4.4-3.6 8-8 8z"></path>
+                                    <line x1="8" y1="14" x2="16" y2="14"></line>
+                                    <line x1="12" y1="18" x2="12" y2="14"></line>
+                                </svg>
+                                🌍
+                            </button>
                         </div>
                         <div class="form-group">
                             <label for="date">Fecha</label>
@@ -107,6 +121,17 @@
                     <div class="map-legend" id="map-legend"></div>
                 </div>
             </div>
+        </div>
+    </div>
+    
+    <div id="map-modal" class="modal">
+        <div class="modal-content">
+            <span class="close-btn">&times;</span>
+            <h2>Seleccionar Ubicación</h2>
+            <div id="map-container-modal"></div>
+            <p id="coords-modal">Latitud: — | Longitud: —</p>
+            <p id="location-modal-name"></p>
+            <button id="select-location-btn" class="btn-primary">Usar esta Ubicación</button>
         </div>
     </div>
 
