--- a/index.html
+++ b/index.html
@@ -43,11 +43,10 @@
                             <label for="mapa-btn">Elegir en Mapa</label>
                             <button type="button" id="mapa-btn" class="btn-primary map-picker-btn">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="vertical-align: middle;">
-                                    <path d="M12 21.6c-4.4 0-8-3.6-8-8 0-3.6 2.5-6.6 6-7.7V3.2L12 2l2.1 1.2v2.7c3.5 1.1 6 4.1 6 7.7 0 4.4-3.6 8-8 8z"></path>
-                                    <line x1="8" y1="14" x2="16" y2="14"></line>
-                                    <line x1="12" y1="18" x2="12" y2="14"></line>
+                                    <circle cx="12" cy="12" r="10"></circle>
+                                    <path d="M12 2a15.3 15.3 0 0 1 4 10 15.3 15.3 0 0 1-4 10 15.3 15.3 0 0 1-4-10 15.3 15.3 0 0 1 4-10z"></path>
+                                    <line x1="2.1" y1="12" x2="21.9" y2="12"></line>
                                 </svg>
-                                🌍
                             </button>
                         </div>
                         <div class="form-group">
