--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         </div>
                         <div class="form-group">
                             <label for="time">Hora</label>
-                            <input type="time" id="time" required>
+                            <input type="time" id="time" required step="3600">
                         </div>
                     </div>
                     <button type="submit" class="btn-primary">Buscar Pronóstico</button>
